# secureWipe-month1

./: .env.example  .gitignore  Cargo.toml  PROGRESS_REPORT.md  README.md  ai_chatbot_groq.py  package-lock.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ai.rs  api.rs  chatbot_cli.rs  devices.rs  devices_test.rs  lib.rs  main_api.rs  platform.rs  wipe_history.rs
crates/core/src/api/: anomaly_detector.rs  artifact_handlers.rs  auth_middleware.rs  certificate_crypto.rs  certificate_render.rs  errors.rs  guards.rs  misc_handlers.rs  offline_handlers.rs  result_policy.rs  storage.rs  tests.rs  types.rs  usb_imaging.rs  wipe_handlers.rs
crates/core/src/engine/: mod.rs  offline_executor.rs  wipe.rs
crates/core/tests/: api_validation_integration.rs
crates/offline_runtime/: Cargo.toml
crates/offline_runtime/src/: main.rs  manifest.rs  result.rs  validator.rs  wipe_executor.rs
data/bootable_usb/: session_20260505_182345.json
docs/: API_DESIGN.md  ARCHITECTURE.md  COMPATIBILITY_AND_SAFETY.md  FINAL_READINESS_REPORT.md  OBSERVABILITY_PLAN.md  OPENAPI.yaml  PRIVACY_AND_SECURITY.md  PRODUCT_TODO.md  RESEARCH-Frontend.md  SAFETY.md  SECRETS_ROTATION_PLAYBOOK.md  VULNERABILITY_DISCLOSURE.md
docs/device-detection-wipe-methods/: summary.md
docs/frontend-research/: summary.md
docs/security-consent-bestpractices/: summary.md
docs/wipe-advisor-logic/: summary.md
frontend/: README.md  index2.html
frontend/frontend-app/: package.json
frontend/frontend-app/public/: index.html
frontend/frontend-app/src/: App.css  App.jsx
frontend/frontend-app/src/components/: CertificateCenterScreen.jsx  DashboardScreen.jsx  DeviceSelectionScreen.jsx  ErrorBoundary.jsx  Header.jsx  OfflineSessionScreen.jsx  OfflineSessionScreen.test.jsx  SettingsScreen.jsx  Sidebar.jsx  WelcomeScreen.jsx  WipeAdvisorScreen.jsx  WipeProgress.jsx
locales/en/: ui.json  voice.json
locales/hi/: ui.json  voice.json
references/: PROJECT_OVERVIEW.md  VENTOY_USB_AND_ISO_RUNBOOK.md
scripts/: generate_checksums.ps1  generate_checksums.sh  provision_usb_legacy.ps1  ventoy_provision_offline.ps1  ventoy_usb_provision.ps1
templates/certificate/: en.html  hi.html
tests/: integration.rs
ventoy-1.1.12/: log.txt
