[package]
name = "securewipe-cli"
version = "0.1.0"
edition = "2021"
authors = ["Palak-0704"]

[dependencies]
chrono = "0.4"
securewipe-core = { path = "../core" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
simplelog = "0.12"
log = "0.4"
tokio = { version = "1.36", features = ["full"] }

[features]
groq_api = ["securewipe-core/groq_api"]
