[package]
name = "securewipe-core"
version = "0.1.0"
edition = "2021"
authors = ["Palak-0704"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
genpdf = "0.2.0"
sha2 = "0.10"
log = "0.4"
simplelog = "0.12"
sysinfo = "0.30"
winapi = { version = "0.3", features = ["winbase", "fileapi"] }

[features]
real_scan = []
real_erase = []

[[bin]]
name = "chatbot_cli"
path = "src/chatbot_cli.rs"
