[package]
name = "securewipe-core"
version = "0.1.0"
edition = "2021"
authors = ["Palak-0704"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
genpdf = "0.2.0"
sha2 = "0.10"
log = "0.4"
simplelog = "0.12"
sysinfo = "0.30"
winapi = { version = "0.3", features = ["winbase", "fileapi"] }
tower-http = { version = "0.4.4", features = ["cors"] }
dotenvy = "0.15"
regex = "1"
lazy_static = "1.4"
base64 = "0.22"
ed25519-dalek = "2.1"
futures-util = "0.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = "0.14"

[features]

real_scan = []
real_erase = []
groq_api = []

[[bin]]
name = "chatbot_cli"
path = "src/chatbot_cli.rs"

[[bin]]
name = "main_api"
path = "src/main_api.rs"
