[package]
name = "securewipe-offline-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Palak-0704"]
description = "Standalone offline wipe runtime binary for SecureWipe-AI handoff packages"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
anyhow = "1.0"

[[bin]]
name = "offline_runtime"
path = "src/main.rs"
